# backend/routes/app.routes.js
@@ -1,4 +1,5 @@
 const categoryController = require("../controllers/categories.controller");
+const productController = require("../controllers/products.controller");
 const express = require("express");
 const router = express.Router();
 
@@ -7,5 +8,11 @@ router.get("/category", categoryController.findAll);
 router.get("/category/:id", categoryController.findOne);
 router.put("/category/:id", categoryController.update);
 router.delete("/category/:id", categoryController.delete);
+
+router.post("/product", productController.create);
+router.get("/product", productController.findAll);
+router.get("/product/:id", productController.findOne);
+router.put("/product/:id", productController.update);
+router.delete("/product/:id", productController.delete);
 
 module.exports = router;
