# backend/swagger.json
@@ -16,6 +16,10 @@
         {
             "name": "Category",
             "description": "Category API"
+        },
+        {
+            "name": "Product",
+            "description": "Product API"
         }
     ],
     "schemes": [
@@ -63,7 +67,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ServiceResponse"
+                            "$ref": "#/definitions/CategoryServiceResponse"
                         }
                     }
                 }
@@ -100,7 +104,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ServiceResponse"
+                            "$ref": "#/definitions/CategoryServiceResponse"
                         }
                     }
                 }
@@ -125,7 +129,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ServiceResponse"
+                            "$ref": "#/definitions/CategoryServiceResponse"
                         }
                     }
                 }
@@ -162,7 +166,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ServiceResponse"
+                            "$ref": "#/definitions/CategoryServiceResponse"
                         }
                     }
                 }
@@ -176,7 +180,278 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ServiceResponse"
+                            "$ref": "#/definitions/CategoryServiceResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/product": {
+            "get": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get All Products",
+                "parameters": [
+                    {
+                        "name": "productName",
+                        "in": "query",
+                        "required": false,
+                        "description": "Product Name",
+                        "type": "string"
+                    },
+                    {
+                        "name": "categoryId",
+                        "in": "query",
+                        "required": false,
+                        "description": "Category",
+                        "type": "string"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "description": "Page Number",
+                        "type": "integer",
+                        "default": 1
+                    },
+                    {
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": false,
+                        "description": "Page Number",
+                        "type": "integer",
+                        "default": 10
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/CategoryServiceResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Create Product",
+                "parameters": [
+                    {
+                        "name": "productName",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "Product name (unique)"
+                    },
+                    {
+                        "name": "category",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "Category ID (ObjectId)"
+                    },
+                    {
+                        "name": "productShortDescription",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "ProductShort Description"
+
+                    },
+                    {
+                        "name": "productDescription",
+                        "in": "formData",
+                        "required": false,
+                        "type": "string",
+                        "description": "Product Description"
+
+                    },
+                    {
+                        "name": "productPrice",
+                        "in": "formData",
+                        "required": true,
+                        "type": "number",
+                        "description": "Product Price"
+
+                    },
+                    {
+                        "name": "productSalePrice",
+                        "in": "formData",
+                        "required": false,
+                        "type": "number",
+                        "description": "ProductSale Price"
+
+                    },
+                    {
+                        "name": "productImage",
+                        "in": "formData",
+                        "required": false,
+                        "type": "file",
+                        "description": "Product Image"
+                    },
+                    {
+                        "name": "productSKU",
+                        "in": "formData",
+                        "required": false,
+                        "type": "string",
+                        "description": "Product SKU"
+
+
+                    },
+                    {
+                        "name": "productType",
+                        "in": "formData",
+                        "required": false,
+                        "type": "string",
+                        "description": "Product type (default: simple)"
+                    },
+                    {
+                        "name": "stockStatus",
+                        "in": "formData",
+                        "required": false,
+                        "type": "string",
+                        "description": "Stock status (default: IN)"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ProducServiceResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/product/{id}": {
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "description": "Product Id",
+                    "type": "string"
+                }
+            ],
+            "get": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Product Details based on Product Id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ProducServiceResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Update Product",
+                "parameters": [
+                    {
+                        "name": "productName",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "Product name (unique)"
+                    },
+                    {
+                        "name": "category",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "Category ID (ObjectId)"
+                    },
+                    {
+                        "name": "productShortDescription",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "ProductShort Description"
+
+                    },
+                    {
+                        "name": "productDescription",
+                        "in": "formData",
+                        "required": false,
+                        "type": "string",
+                        "description": "Product Description"
+
+                    },
+                    {
+                        "name": "productPrice",
+                        "in": "formData",
+                        "required": true,
+                        "type": "number",
+                        "description": "Product Price"
+
+                    },
+                    {
+                        "name": "productSalePrice",
+                        "in": "formData",
+                        "required": false,
+                        "type": "number",
+                        "description": "ProductSale Price"
+
+                    },
+                    {
+                        "name": "productImage",
+                        "in": "formData",
+                        "required": false,
+                        "type": "file",
+                        "description": "Product Image"
+                    },
+                    {
+                        "name": "productSKU",
+                        "in": "formData",
+                        "required": false,
+                        "type": "string",
+                        "description": "Product SKU"
+
+
+                    },
+                    {
+                        "name": "productType",
+                        "in": "formData",
+                        "required": false,
+                        "type": "string",
+                        "description": "Product type (default: simple)"
+                    },
+                    {
+                        "name": "stockStatus",
+                        "in": "formData",
+                        "required": false,
+                        "type": "string",
+                        "description": "Stock status (default: IN)"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ProducServiceResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Delete Product",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ProducServiceResponse"
                         }
                     }
                 }
@@ -185,7 +460,10 @@
     },
     "definitions": {
         "Category": {
-            "required": ["categoryName", "_id"],
+            "required": [
+                "categoryName",
+                "_id"
+            ],
             "properties": {
                 "_id": {
                     "type": "integer",
@@ -202,7 +480,50 @@
                 }
             }
         },
-        "ServiceResponse": {
+        "Product": {
+            "required": [
+                "productName",
+                "_id",
+                "productShortDescription",
+                "productPrice",
+                "productSalePrice",
+                "productType"
+            ],
+            "properties": {
+                "_id": {
+                    "type": "integer",
+                    "uniqueItems": true
+                },
+                "category": {
+                    "type": "integer"
+                },
+                "productShortDescription": {
+                    "type": "string"
+                },
+                "productDescription": {
+                    "type": "string"
+                },
+                "productPrice": {
+                    "type": "integer"
+                },
+                "productSalePrice": {
+                    "type": "integer"
+                },
+                "productImage": {
+                    "type": "string"
+                },
+                "productSKU": {
+                    "type": "string"
+                },
+                "productType": {
+                    "type": "string"
+                },
+                "stockStatus": {
+                    "type": "string"
+                }
+            }
+        },
+        "CategoryServiceResponse": {
             "properties": {
                 "message": {
                     "type": "string"
@@ -211,6 +532,19 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/Category"
+                    }
+                }
+            }
+        },
+        "ProducServiceResponse": {
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Product"
                     }
                 }
             }
